--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,9 @@ jobs:
   build_and_deploy:
     name: Build and Deploy
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
@@ -62,6 +65,9 @@ jobs:
     name: Infrastructure
     runs-on: ubuntu-latest
     needs: [build_and_deploy]
+    permissions:
+      id-token: write
+      contents: read
     outputs:
       private_subnet_ids: ${{ steps.terraform-outputs.outputs.private_subnet_ids }}
       # rds_security_group_id: ${{ steps.terraform-outputs.outputs.rds_security_group_id }}
