update oid github role

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,16 +23,17 @@ jobs:
       id-token: write
       contents: read
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v4
-
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           # aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           # aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/github_oidc_role
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/iam_oidc_github_role
           aws-region: ${{ env.AWS_REGION }}
+
+      - name: Checkout Repo
+        uses: actions/checkout@v4
+
 
       - name: Set Up Docker
         uses: docker/setup-buildx-action@v2
