fix typo in aws cred configs

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,16 +76,14 @@ jobs:
       run:
         working-directory: terraform
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v4
-
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          # aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          # aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/iam_oidc_github_role
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/iam_oidc_github_role
           aws-region: ${{ env.AWS_REGION }}
+      - name: Checkout Repo
+        uses: actions/checkout@v4
+
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
