--- a/nextjs-server-app/Dockerfile
+++ b/nextjs-server-app/Dockerfile
@@ -30,7 +30,7 @@ WORKDIR /app
 # This will improve the performance of the application
 ENV NODE_ENV=production
 # Installing wget for healthchecks
-RUN apk add --no-cache wget
+RUN apk add --no-cache wget curl
 # Creating a new user group
 RUN addgroup --system --gid 1001 group1
 # Creating a new user
