initialize terraform using backend state

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,49 +62,55 @@ jobs:
           file: nextjs-server-app/Dockerfile
           platforms: linux/amd64
 
-  # terraform:
-  #   name: Infrastructure
-  #   runs-on: ubuntu-latest
-  #   needs: [build_and_deploy]
-  #   permissions:
-  #     id-token: write
-  #     contents: read
-  #   outputs:
-  #     private_subnet_ids: ${{ steps.terraform-outputs.outputs.private_subnet_ids }}
-  #     # rds_security_group_id: ${{ steps.terraform-outputs.outputs.rds_security_group_id }}
-  #   defaults:
-  #     run:
-  #       working-directory: terraform
-  #   steps:
-  #     - name: Configure AWS Credentials
-  #       uses: aws-actions/configure-aws-credentials@v4
-  #       with:
-  #         role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/iam_oidc_github_role
-  #         aws-region: ${{ env.AWS_REGION }}
-  #     - name: Checkout Repo
-  #       uses: actions/checkout@v4
+  terraform:
+    name: Infrastructure
+    runs-on: ubuntu-latest
+    needs: [build_and_deploy]
+    permissions:
+      id-token: write
+      contents: read
+    outputs:
+      aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      private_subnet_ids: ${{ steps.terraform-outputs.outputs.private_subnet_ids }}
+      # rds_security_group_id: ${{ steps.terraform-outputs.outputs.rds_security_group_id }}
+    defaults:
+      run:
+        working-directory: terraform
+    steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          # role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/iam_oidc_github_role
+          aws-region: ${{ env.AWS_REGION }}
+      - name: Checkout Repo
+        uses: actions/checkout@v4
 
 
-  #     - name: Setup Terraform
-  #       uses: hashicorp/setup-terraform@v3
-  #       with:
-  #         terraform_version: 1.7
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.7
 
-  #     - name: Initialize Terraform
-  #       run: terraform init
+      - name: Initialize Terraform
+        run: |
+          terraform init \
+            -backend-config="bucket=state-nextjs-ecs-terraform" \
+            -backend-config="key=terraform.tfstate" \
+            -backend-config="region=${{ env.AWS_REGION }}"
 
-  #     - name: terraform plan
-  #       run: |
-  #         terraform plan -var-file=vars.tfvars
+      - name: terraform plan
+        run: |
+          terraform plan -var-file=vars.tfvars
 
-  #     - name: Apply Terraform Changes
-  #       run: |
-  #         terraform workspace select default
-  #         terraform apply -no-color -input=false -auto-approve -var-file=vars.tfvars
+      - name: Apply Terraform Changes
+        run: |
+          terraform workspace select default
+          terraform apply -no-color -input=false -var-file=vars.tfvars -auto-approve 
 
-  #     - name: Get Terraform Outputs
-  #       id: terraform-outputs
-  #       run: |
-  #         terraform workspace select default
-  #         echo "private_subnet_ids=$(terraform output -raw private_subnet_ids)" >> $GITHUB_OUTPUT
-  #         # echo "rds_security_group_id=$(terraform output -raw rds_security_group_id)" >> $GITHUB_OUTPUT
+      - name: Get Terraform Outputs
+        id: terraform-outputs
+        run: |
+          terraform workspace select default
+          echo "private_subnet_ids=$(terraform output -raw private_subnet_ids)" >> $GITHUB_OUTPUT
+          # echo "rds_security_group_id=$(terraform output -raw rds_security_group_id)" >> $GITHUB_OUTPUT
